[package]
name = "zkllvm-examples-generator"
version = "0.1.0"
edition = "2021"
authors = [ "Vasiliy Olekhov vasiliy.olekhov@nil.foundation" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.16", features = ["derive"]}
minijinja = { version = "1.0.11", features = ["loader"] }
neptune = "13.0.0"
serde = { version = "1.0.195", features = ["derive"] }
log = "0.4.20"
env_logger = "0.10.1"
pasta_curves = "0.5.1"
ff = "0.13.0"
generic-array = "1.0.0"
merkletree = "0.23.0"
serde_json = "1.0.111"
